# nonebot-plugin-BAgacha

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_BAdrawcard/: __init__.py  db.py  draw.py  main.py  manage.py  models.py  pyproject.toml  spider.py  utils.py
nonebot_plugin_BAdrawcard/nonebot_plugin_BAdrawcard/: __init__.py  config.py  manage.py  models.py  pull.py  spider.py  utils.py
